[package]
name = "atomic-prim-traits"
version = "0.1.1"
description = "Traits over primitive atomic types."
keywords = ["atomic", "atomics", "trait", "traits"]
categories = ["concurrency", "hardware-support"]
homepage = "https://github.com/irrustible/atomic-prim-traits"
repository = "https://github.com/irrustible/atomic-prim-traits"
authors = ["James Laver <james.laver@gmail.com>"]
license = "MPL-2.0"
edition = "2018"
readme = "README.md"

[features]
nightly = []
