[package]
name = "atomic_prim_traits"
version = "0.2.0"
description = "Traits over primitive atomic types."
keywords = ["atomic", "atomics", "trait", "traits"]
categories = ["concurrency", "hardware-support"]
homepage = "https://github.com/irrustible/atomic_prim_traits"
repository = "https://github.com/irrustible/atomic_prim_traits"
documentation = "https://docs.rs/atomic_prim_traits"
authors = ["James Laver <james.laver@gmail.com>"]
license = "MPL-2.0"
edition = "2018"
readme = "README.md"

[features]
nightly = []
